# st-issues

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  app.py  pyproject.toml  requirements.txt  🚧_Streamlit_Issue_Explorer.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: .gitignore  agent_wiki_explorer.py  bug_explorer.py  community_prs.py  company_requests.py  flaky_tests.py  frontend_bundle_analysis.py  generate_cursor_prompt.py  github_issue_download.py  github_stats.py  interrupt_rotation.py  issue_explorer.py  issue_leaderboard.py  issue_reactions.py  load_testing.py  open_issues.py  playwright_test_stats.py  spec_renderer.py  test_coverage_frontend.py  test_coverage_python.py  wheel_size.py
app/archive/: issue_exporter.py  replace_visit_badges.py
app/gh-13853/: app.py
app/perf/: lighthouse_interpreting_results.py  lighthouse_prs.py  lighthouse_runs.py  lighthouse_single_run.py  lighthouse_writing_a_test.py  playwright_interpreting_results.py  playwright_metrics_comparison.py  playwright_metrics_explorer.py  playwright_performance_runs.py  playwright_writing_a_test.py  pytest_benchmark_runs.py  pytest_interpreting_results.py  pytest_writing_a_test.py  streamlit_app.py
app/utils/: __init__.py  agent_wiki.py  coverage_parsers.py  github_graphql_utils.py  github_utils.py  interrupt_data.py  issue_formatting.py  markdown_rendering.py  smokeshow.py  streamlit_date_input.py
archive/: 2_💬_Streamlit_Issues_Leaderboard.py
archive/gh-4865/: app.py
archive/gh-5005/: app.py
archive/gh-5027/: Pipfile
archive/gh-5350/: app.py
gh-11180/: app.py
gh-5511/: app.py
gh-6274/: app.py
issues/gh-10025/: app.py
issues/gh-10093/: app.py
issues/gh-10102/: app.py
issues/gh-10107/: app.py
issues/gh-10115/: app.py
issues/gh-10168/: app.py
issues/gh-10181/: app.py
issues/gh-10199/: app.py
issues/gh-10204/: app.py
issues/gh-10265/: app.py
issues/gh-10299/: app.py
issues/gh-10308/: app.py
issues/gh-10310/: app.py
issues/gh-10357/: app.py
issues/gh-10365/: app.py
issues/gh-10385/: app.py
issues/gh-10411/: app.py
issues/gh-10415/: app.py
issues/gh-10442/: app.py
issues/gh-10553/: app.py
issues/gh-10637/: app.py
issues/gh-10656/: app.py
issues/gh-10673/: app.py
issues/gh-10714/: app.py
issues/gh-10719/: app.py
issues/gh-10768/: app.py
issues/gh-10815/: app.py
issues/gh-10824/: app.py
issues/gh-10843/: app.py
issues/gh-10863/: app.py
issues/gh-10880/: app.py
issues/gh-10907/: app.py
issues/gh-10929/: app.py
issues/gh-10937/: app.py
issues/gh-10957/: app.py
issues/gh-10995/: app.py
issues/gh-11031/: app.py
issues/gh-11062/: app.py
issues/gh-11110/: app.py
issues/gh-11178/: app.py
issues/gh-11180/: app.py
issues/gh-11219/: app.py
issues/gh-11276/: app.py
issues/gh-11299/: app.py
issues/gh-11327/: app.py
issues/gh-11342/: app.py
issues/gh-11367/: app.py
issues/gh-11373/: app.py
issues/gh-11415/: app.py
issues/gh-11419/: app.py
issues/gh-11424/: app.py
issues/gh-11430/: app.py
issues/gh-11489/: app.py
issues/gh-11502/: app.py
issues/gh-11519/: app.py
issues/gh-11575/: app.py
issues/gh-11583/: app.py
issues/gh-1161/: app.py
issues/gh-11611/: app.py
issues/gh-11660/: app.py
issues/gh-11668/: app.py
issues/gh-11702/: app.py
issues/gh-11704/: app.py
issues/gh-11722/: app.py
issues/gh-11761/: 11761.pq  app.py
issues/gh-11800/: app.py
issues/gh-11801/: app.py
issues/gh-11802/: app.py
issues/gh-11845/: app.py
issues/gh-11933/: app.py
issues/gh-11949/: app.py
issues/gh-1196/: app.py
issues/gh-11971/: app.py
issues/gh-11996/: app.py
issues/gh-12067/: app.py
issues/gh-12069/: app.py
issues/gh-12146/: app.py
issues/gh-12149/: app.py
issues/gh-12230/: app.py
issues/gh-12305/: app.py
issues/gh-12326/: app.py
issues/gh-12340/: app.py
issues/gh-12349/: app.py
issues/gh-12355/: app.py
issues/gh-12366/: app.py
issues/gh-12386/: app.py
issues/gh-12388/: app.py
issues/gh-12390/: app.py
issues/gh-12435/: app.py
issues/gh-12454/: app.py
issues/gh-12465/: app.py
issues/gh-12585/: NOTES.md  PENDING_ACTIONS.md  app.py
issues/gh-12607/: NOTES.md  app.py  requirements.txt
issues/gh-12678/: fix-implementation-summary.md  test_fix.py
issues/gh-12681/: app.py
issues/gh-12716/: NOTES.md  app.py
issues/gh-12743/: app.py  fix-implementation-summary.md  test_fix.py
issues/gh-12745/: NOTES.md  app.py
issues/gh-12762/: app.py
issues/gh-12782/: NOTES.md  PENDING_ACTIONS.md  Pipfile  app.py
issues/gh-12792/: NOTES.md  README.md  app.py
issues/gh-12815/: NOTES.md  app.py
issues/gh-12842/: app.py
issues/gh-12846/: NOTES.md  app.py  app_test.py
issues/gh-12859/: app.py
issues/gh-12986/: app.py
issues/gh-13162/: app.py
issues/gh-13213/: app.py
issues/gh-13224/: app.py
issues/gh-13260/: app.py
issues/gh-13263/: app.py
issues/gh-13305/: app.py
issues/gh-13339/: app.py
issues/gh-13526/: NOTES.md  app.py
issues/gh-13633/: app.py
issues/gh-13646/: app.py
issues/gh-13658/: app.py
issues/gh-13974/: app.py
issues/gh-14018/: app.py
issues/gh-14050/: app.py
issues/gh-14052/: app.py
issues/gh-14152/: app.py
issues/gh-14209/: NOTES.md
issues/gh-14222/: app.py
issues/gh-14249/: app.py
issues/gh-14280/: app.py
issues/gh-14671/: NOTES.md  app.py
issues/gh-14672/: NOTES.md  app.py
issues/gh-14704/: NOTES.md
pages/: 1_📊_Streamlit_Issues_Summary.py  1_🗃_Open_Issues.py  2_💬_Streamlit_Issues_Leaderboard.py  3_🗃_Open_Issues.py  3_🗃_Streamlit_Open_Issues.py  4_🫶_Issue_Reactions.py  5_ 🧫_Flaky_Tests.py  5_🫶_Issue_Reactions.py  6_🛞_Wheel_Size.py  7_☂️_Code_Coverage_(Python).py  7_☂️_Test_Coverage_(Python).py  8_☂️_Test_Coverage_(Frontend).py  9_👥_Community_PRs.py
static/: github_issues_open_cleaned_all_summarized.csv
tests/: test_agent_wiki.py  test_coverage_parsers.py  test_github_utils_resilience.py  test_interrupt_data.py  test_issue_formatting.py  test_markdown_rendering.py
(+412 files in other folders)
