[project]
name = "st-issues"
version = "0.1.0"
description = "Various tools to help with the Streamlit library development."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit[starlette]>=1.53.0",
    "pandas",
    "numpy",
    "plotly",
    "altair>=5",
    "matplotlib",
    "seaborn",
    "pydeck",
    "streamlit-extras",
    "pytz",
    "vega-datasets",
    "psutil",
    "streamlit-folium",
    "streamlit-aggrid",
    "humanize",
    "coverage",
    "httpx",
    "polars",
    "jinja2",
    "streamlit-pdf",
    "git-fame",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# =============================================================================
# UV configuration
# =============================================================================
[tool.uv]
default-groups = ["dev"]

# =============================================================================
# Development dependencies
# =============================================================================
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
    "mypy>=1.15",
    "watchdog",
    "pandas-stubs",
]

# =============================================================================
# Ruff configuration (linting + formatting)
# =============================================================================
[tool.ruff]
line-length = 120
# In addition to the standard set of exclusions, omit all tests:
extend-exclude = [
    # Autogenerated files:
    "issues/**",
    "archive/**",
    "static/**",
]

[tool.ruff.lint]
preview = true
select = [
    "ALL", # All rules
]
ignore = [
    # Ignored rule sets:
    "DTZ", # Checks for usage of unsafe naive datetime class.
    "C90", # Checks for McCabe complexity.
    "SLF", # Checks unexpected for private member access.
    "BLE", # Checks for blind except statements.
    "CPY", # Checks for copyright statement.
    "DOC", # Checks for correct docstring format.
    "FBT",
    # Ignored rules:
    "ANN401",  # Checks that `any` is not used as an annotation.
    "B904",    # Checks for raise statements in exception handlers that lack a from clause.
    "COM812",  # Checks for absence of trailing commas. Not recommended with formatter.
    "COM819",  # Checks for presence of prohibited trailing commas. Not recommended with formatter.
    "D104",    # Checks for missing docstring in public package.
    "D107",    # Checks for missing docstring in __init__.
    "FIX002",  # Checks todo comments.
    "FURB152", # Checks for math constants that could use math module.
    "PD009",   # Checks for usage of pd.DataFrame.iat.
    "PLC0415", # Enforces imports to be at the top-level of the file.
    "PLC2701", # Checks for imports of private names.
    "PLR0904", # Checks for classes with too many public methods.
    "PLR0911", # Checks for functions with too many return statements.
    "PLR0912", # Checks for functions with too many branches.
    "PLR0913", # Checks for functions with too many arguments.
    "PLR0914", # Checks for functions with too many local variables.
    "PLR0915", # Checks for functions with too many statements.
    "PLR0916", # Checks for too many boolean expressions in if statements.
    "PLR0917", # Checks for functions with too many positional arguments.
    "PLR1702", # Checks for functions with too many nested blocks.
    "PLR2004", # Checks for numerical values that could be put into a constant.
    "PLR6301", # Checks for methods that do not use self.
    "RET504",  # Checks for assignments that immediately precede a return of the assigned variable (too opinionated).
    "RUF052",  # Checks for dummy variables that are used.
    "RUF067",  # Checks for non empty __init__ modules.
    "SIM117",  # Enforces single with statement with multiple contexts.
    "TD002",   # Checks for missing author in TODO comment.
    "TD003",   # Checks for missing issue link in TODO comment.
    "ERA001",  # Checks for commented out code.
    "TRY300",
    "E501",    # Line too long - ignore for user-facing strings, markdown, and help text.
    "T201",
    # To include:
    "D103",
    "D100",
    "D101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN",    # Ignore annotation rules (test functions don't need full typing).
    "ARG",    # Allow unused arguments (common in test fixtures and mocks).
    "D",      # Ignore docstring rules (tests are self-documenting via names).
    "INP",    # Allow implicit namespace packages (test directories).
    "N",      # Ignore naming conventions (test names can be descriptive/long).
    "PERF",   # Ignore performance rules (clarity over speed in tests).
    "S",      # Ignore bandit security rules (test code doesn't need security hardening).
    "TRY",    # Ignore tryceratops rules (simpler exception handling in tests).
    "FBT001", # Allow Boolean-typed positional argument in function definition.
]
fixable = ["ALL"]
extend-safe-fixes = ["TC002", "TC003"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-unused-arguments]
# Ignore unused variadic argument, like *args and **kwargs.
ignore-variadic-names = true

[tool.ruff.lint.flake8-comprehensions]
# Allow dict calls that make use of keyword arguments (e.g., dict(a=1, b=2)).
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

# =============================================================================
# mypy configuration (type checking)
# =============================================================================
[tool.mypy]
python_version = "3.13"
files = ["app"]
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = true
ignore_missing_imports = true
disallow_any_generics = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true


# =============================================================================
# ty configuration (type checking - alternative to mypy)
# =============================================================================
[tool.ty.src]
# Only check the app directory, exclude archive and issues (example files)
include = ["app"]

[tool.ty.rules]
# Disable some overly strict rules that produce many false positives
# with pandas and Streamlit dynamic typing patterns
possibly-missing-attribute = "ignore" # dict.get() on `x or {}` patterns
unused-ignore-comment = "ignore"      # Allow mypy-compatible ignore comments

# =============================================================================
# pytest configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
